examples/test/testpolicy12215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12215
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key39: value15
      key14: value38
      key11: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value46
          key40: value4
          key20: value36
